test/negative/grammar/n_circularity1.cfr
// Tests that a clafer cannot be its own super
//
// Expected Output:
//   Type/Name Resolution Error

A : A